--- a/src/components/layout/LayoutWrapper.module.scss
+++ b/src/components/layout/LayoutWrapper.module.scss
@@ -13,11 +13,10 @@
   @media (max-width: 767px) {
     position: fixed;
     top: auto;
-    bottom: 0;
+    bottom: -100vh;
     left: 0;
     right: 0;
     width: 100%;
-    height: 100vh;
     z-index: 40;
     will-change: bottom;
   }
